minor ui changes include removing of send button and overflow changes.

--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -8,7 +8,7 @@
     <div class="col-6"><input type="button" value="Leave Game" id="btn-leave" class="btn btn-danger" /></div>
     <div class="row">
         <div class="col-9" style="border: 1px solid black;" id="startWindow">
-            <div class="row"><input type="button" value="Start" id="startGame" /></div>
+            <div class="row"><input type="button" value="Start" id="startGame" class="btn btn-success"/></div>
         </div>
         <div class="col-9" id="playingTable" style="min-height: 500px; max-height: 500px; border: 1px solid black; display: none;">
             <div id="deckArea">
@@ -29,7 +29,6 @@
             </div>
             <div class="row p-1 chat-message">
                 <div class="mb-3"><input type="text" id="message" placeholder="type a message.."  class="form-control"/></div>
-                <input type="button" id="sendMessage" value="Send Message" class="btn btn-primary"/>
             </div>
             <div class="row p-1">
                 
