--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -25,6 +25,7 @@ body {
     overflow: scroll;
     font-size: small;
     min-height: 150px;
+    max-height: 150px;
 }
 
 .player-cards {
@@ -32,7 +33,8 @@ body {
     width: 100%;
     height: 100px;
     border: 1px solid red;
-    overflow: scroll;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 .player-cards img {
