changed the sizing of the chat window.

--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -23,7 +23,7 @@
         <!-- Chat window-->
         <div class="col-3 chat-window" style="border: 1px solid black;">
 
-            <div class="chat-log" style="max-height: auto; min-height: 150px; border: 1px solid black;">
+            <div class="chat-log">
                 <ul id="chatView">
                 </ul>
             </div>
