--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -25,15 +25,22 @@ body {
     overflow: scroll;
     font-size: small;
     min-height: 150px;
-    max-height: 150px;
+    height: 80%;
+}
+
+.chat-log {
+    max-height: auto;
+    height: 80%;
+    border: 1px solid black;
 }
 
 .player-cards {
 
     width: 100%;
-    height: 100px;
+    height: 120px;
     border: 1px solid red;
     overflow-x: scroll;
+    overflow-y: hidden;
     white-space: nowrap;
 }
 
