testing a UI layout.

--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -7,31 +7,48 @@
 <div class="container" style="border: 1px solid black;">
     <div class="col-6"><input type="button" value="Leave Game" id="btn-leave" class="btn btn-danger" /></div>
     <div class="row">
-        <div class="col-9" style="border: 1px solid black;" id="startWindow">
+        <div class="col-12" style="border: 1px solid black;" id="startWindow">
             <div class="row"><input type="button" value="Start" id="startGame" class="btn btn-success"/></div>
         </div>
-        <div class="col-9" id="playingTable" style="min-height: 500px; max-height: 500px; border: 1px solid black; display: none;">
-            <div id="deckArea">
+        <div class="col-12" style="border: 1px solid black;">
+            <div class="row">
+                <div class="col-4" style="border: 1px solid black;">Player1</div>
+                <div class="col-4" style="border: 1px solid black;">Player1</div>
+                <div class="col-4" style="border: 1px solid black;">Player1</div>
             </div>
-            <div class="col-9" style="border: 1px solid black; padding-bottom: 5px; height: 80%; width: 100%;" ondrop="HandleDragDrop(event)" ondragover="allowDrop(event)">
-                <div class="row col-12" id="cardsInPlayArea">
-                    
+            <div class="row">
+                <div class="col-1" style="border: 1px solid black;">player1</div>
+                <div class="col-8" style="border: 1px solid black; height: 500px;">
+                    <div class="col-9" id="playingTable" style="min-height: 500px; max-height: 500px; border: 1px solid black; display: none;">
+                        <div id="deckArea">
+                        </div>
+                        <div class="col-9" style="border: 1px solid black; padding-bottom: 5px; height: 80%; width: 100%;" ondrop="HandleDragDrop(event)" ondragover="allowDrop(event)">
+                            <div class="row col-12" id="cardsInPlayArea">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1" style="border: 1px solid black;">player</div>
+                <div class="col-2">
+                    <!-- Chat window-->
+                    <div class="chat-window" style="border: 1px solid black;">
+
+                        <div class="chat-log" style="max-height: auto; min-height: 150px; border: 1px solid black;">
+                            <ul id="chatView">
+                            </ul>
+                        </div>
+                        <div class="row p-1 chat-message">
+                            <div class="mb-3"><input type="text" id="message" placeholder="type a message.." class="form-control" /></div>
+                        </div>
+                        <div class="row p-1">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <!-- Chat window-->
-        <div class="col-3 chat-window" style="border: 1px solid black;">
-
-            <div class="chat-log" style="max-height: auto; min-height: 150px; border: 1px solid black;">
-                <ul id="chatView">
-                </ul>
-            </div>
-            <div class="row p-1 chat-message">
-                <div class="mb-3"><input type="text" id="message" placeholder="type a message.."  class="form-control"/></div>
-            </div>
-            <div class="row p-1">
-                
+            <div class="row">
+                <div class="col-4" style="border: 1px solid black;">Player1</div>
+                <div class="col-4" style="border: 1px solid black;">Player1</div>
+                <div class="col-4" style="border: 1px solid black;">Player1</div>
             </div>
         </div>
     </div>
