--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -18,12 +18,12 @@
         </div>
         <div class="col-12" style="border: 1px solid black;">
             <div class="row">
-                <div class="col-4" style="border: 1px solid black;" id="seat1">Seat 1</div>
-                <div class="col-4" style="border: 1px solid black;" id="seat2">Seat 2</div>
-                <div class="col-4" style="border: 1px solid black;" id="seat3">Seat 3</div>
+                <div class="col-4 player-seat" id="seat1">Seat 1</div>
+                <div class="col-4 player-seat" id="seat2">Seat 2</div>
+                <div class="col-4 player-seat" id="seat3">Seat 3</div>
             </div>
             <div class="row">
-                <div class="col-1" style="border: 1px solid black;" id="seat8">Seat 8</div>
+                <div class="col-1 player-seat" id="seat8">Seat 8</div>
                 <div class="col-8" style="border: 1px solid black; height: 500px;">
                     <div class="col-9 table-container" id="playingTable">
                         <div id="deckArea">
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-1" style="border: 1px solid black;" id="seat4">Seat 4</div>
+                <div class="col-1 player-seat" id="seat4">Seat 4</div>
                 <div class="col-2">
                     <!-- Chat window-->
                     <div class="chat-window" style="border: 1px solid black;">
@@ -52,9 +52,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4" style="border: 1px solid black;" id="seat7">Seat 7</div>
-                <div class="col-4" style="border: 1px solid black;" id="seat6">Seat 6</div>
-                <div class="col-4" style="border: 1px solid black;" id="seat5">Seat 5</div>
+                <div class="col-4 player-seat" id="seat7">Seat 7</div>
+                <div class="col-4 player-seat" id="seat6">Seat 6</div>
+                <div class="col-4 player-seat" id="seat5">Seat 5</div>
             </div>
         </div>
     </div>
