--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -25,7 +25,7 @@ body {
     overflow: scroll;
     font-size: small;
     min-height: 150px;
-    height: 80%;
+    height: 20vh;
 }
 
 .chat-log {
