--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -107,6 +107,14 @@ body {
     min-height: 80px;
 }
 
+.card-count {
+    height: 80px;
+    width: 55px;
+    border: 1px solid black;
+    background-color: #d5f2f2;
+    border-radius: 3px;
+}
+
 /*.under {
     position: relative;
     left: 0px;
