some minor tweaks around the new deck area.

--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -35,9 +35,9 @@
                 <div class="col-1 player-seat" id="seat4">Seat 4</div>
                 <div class="col-2">
                     <!-- Chat window-->
-                    <div class="chat-window" style="border: 1px solid black;">
+                    <div class="chat-window" style="border: 1px solid black; margin-top:5px;">
 
-                        <div class="chat-log" style="max-height: auto; min-height: 150px; border: 1px solid black;">
+                        <div class="chat-log">
                             <ul id="chatView">
                             </ul>
                         </div>
