--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -31,7 +31,17 @@ body {
 .chat-log {
     max-height: auto;
     height: 80%;
-    border: 1px solid black;
+}
+
+#deckArea {
+    padding: 5px;
+    height: 100px;
+    width: 100%;
+}
+
+#deckArea img {
+    max-height: 80px;
+    min-height: 80px;
 }
 
 .table-container {
@@ -74,7 +84,6 @@ height:100%;
 
     width: 100%;
     height: 120px;
-    border: 1px solid red;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
@@ -86,17 +95,6 @@ height:100%;
 }
 
 .player-cards img {
-    max-height: 80px;
-    min-height: 80px;
-}
-
-#deckArea {
-    height: 100px;
-    width: 100%;
-    border: 1px solid black;
-}
-
-#deckArea img {
     max-height: 80px;
     min-height: 80px;
 }
@@ -113,21 +111,3 @@ height:100%;
     background-color: #d5f2f2;
     border-radius: 3px;
 }
-
-/*.under {
-    position: relative;
-    left: 0px;
-    top: 0px;
-    z-index: -1;
-}
-
-.over {
-    position: absolute;
-    left: 40px;
-    top: 10px;
-    z-index: -1;
-}
-
-.cardInPlayDiv {
-    position: relative;
-}*/
