--- a/Durak/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Durak/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -22,8 +22,18 @@
             </div>
             <div class="form-floating">
                 <input asp-for="Input.FirstName" class="form-control" />
-                <label asp-for="Input.FirstName" class="form-label" />
+                <label asp-for="Input.FirstName" class="form-label" ></label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.LastName" class="form-control" />
+                <label asp-for="Input.LastName" class="form-label"></label>
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.NickName" class="form-control" />
+                <label asp-for="Input.NickName" class="form-label"></label>
+                <span asp-validation-for="Input.NickName" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
