Started adding in some basic timers.  I'm not really happy with the way the timers are working in relation to the hub but it's working for now.

--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -67,9 +67,9 @@
         </div>
     </div>
 </div>
-    <!-- I'm just adding these buttons here for testing purposes until I impliment timers.
-         Once the timer is implimented, the pickup button will remain, but the done attacking will be removed
-         and pickup will have a timeout period as well.
-    -->
+
+<div id="message-box">
+    <p id="message-text"></p>
+</div>
 
 <script src="~/js/game/game.js"></script>
