--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -111,3 +111,27 @@ height:100%;
     background-color: #d5f2f2;
     border-radius: 3px;
 }
+
+
+#message-box {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    background-color: #fff;
+    border: 1px solid #000;
+    padding: 10px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+    #message-box.show {
+        opacity: 1;
+        transform: translate(-50%, 0);
+    }
+
+#message-text {
+    margin: 0;
+    font-size: 16px;
+    text-align: center;
+}
