--- a/Durak/Pages/game.cshtml
+++ b/Durak/Pages/game.cshtml
@@ -53,6 +53,7 @@
                         <div class="col-6 card-count" id="card-count-container">    
                         </div>
                     </div>
+                    <div id="timer"></div>
                 </div>
             </div>
             <div class="row">
