--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -2,12 +2,6 @@ html {
   font-size: 14px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
 html {
   position: relative;
   min-height: 100%;
@@ -18,37 +12,22 @@ body {
 }
 
 /******************** Game Page Items ************************/
-.chat-log ul {
-    padding-left: 0;
-    list-style: none;
-    width: 100%;
-    overflow: scroll;
-    font-size: small;
-    min-height: 150px;
-    height: 20vh;
-}
 
-.chat-log {
-    max-height: auto;
-    height: 80%;
-}
+/******************** General Layout *************************/
 
-#deckArea {
-    padding: 5px;
-    height: 100px;
-    width: 100%;
-}
-
-#deckArea img {
-    max-height: 80px;
-    min-height: 80px;
+.container-main {
+    width: 80%;
 }
 
 .table-container {
-height:100%;
+    height: 100%;
     border: 1px solid black;
     display: none;
     width: 100%;
+}
+
+.table-playing-area {
+    height: 350px;
 }
 
 .cards-drop-area {
@@ -80,38 +59,27 @@ height:100%;
     border: 1px solid red;
 }
 
-.player-cards {
-
-    width: 100%;
-    height: 120px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-}
-
-.card-img {
-    max-height: 80px;
-    min-height: 80px;
-}
-
-.player-cards img {
-    max-height: 80px;
-    min-height: 80px;
-}
-
-.row img {
-    max-height: 80px;
-    min-height: 80px;
-}
-
-.card-count {
+#deckArea {
+    padding: 5px;
     height: 80px;
-    width: 55px;
-    border: 1px solid black;
-    background-color: #d5f2f2;
-    border-radius: 3px;
+    width: 100%;
 }
 
+/******************** Chat box Layout *************************/
+.chat-log ul {
+    padding-left: 0;
+    list-style: none;
+    width: 100%;
+    overflow: scroll;
+    font-size: small;
+    min-height: 150px;
+    height: 20vh;
+}
+
+.chat-log {
+    max-height: auto;
+    height: 80%;
+}
 
 #message-box {
     position: fixed;
@@ -125,13 +93,101 @@ height:100%;
     transition: opacity 0.5s ease-in-out;
 }
 
-    #message-box.show {
-        opacity: 1;
-        transform: translate(-50%, 0);
-    }
+#message-box.show {
+    opacity: 1;
+    transform: translate(-50%, 0);
+}
 
 #message-text {
     margin: 0;
     font-size: 16px;
     text-align: center;
+}
+
+/******************** Cards Styling & Layout ******************/
+
+.card-count {
+    height: 50px;
+    width: 30px;
+    border: 1px solid black;
+    background-color: #d5f2f2;
+    border-radius: 3px;
+}
+
+#nuke-holder {
+    height: 50px;
+}
+
+#deckArea img {
+    max-height: 50px;
+    min-height: 50px;
+}
+
+.player-cards {
+
+    width: 100%;
+    height: 80px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.card-img {
+    max-height: 50px;
+    min-height: 50px;
+}
+
+.player-cards img {
+    max-height: 50px;
+    min-height: 50px;
+}
+
+.row img {
+    max-height: 60px;
+    min-height: 60px;
+}
+
+/******************** Generic Layout Items *************************/
+
+.margin-top-5 {
+    margin-top: 5px;
+}
+
+.border-1px-solid {
+    border: 1px solid black;
+}
+
+/*  I didn't want to go here since I was planning on building this into a mobile app and therefor designed for desktop first but here we are...
+    That being said, I'm still going mobile.
+
+
+********************* View Ports ***********************************/
+@media (max-width: 575.98px) {
+    
+}
+
+
+@media (max-width: 767.98px) {
+    
+}
+
+
+@media (max-width: 991.98px) {
+
+}
+
+
+@media (max-width: 1199.98px) {
+
+}
+
+
+@media (max-width: 1399.98px) {
+
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
 }
