--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -8,16 +8,14 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: #63d471;
+    color: black;
 }
 
 /******************** Game Page Items ************************/
 
 /******************** General Layout *************************/
-
-.container-main {
-    width: 80%;
-}
 
 .table-container {
     height: 100%;
@@ -26,17 +24,14 @@ body {
     width: 100%;
 }
 
-.table-playing-area {
-    height: 350px;
-}
-
 .cards-drop-area {
     border: 1px solid black;
+    border-radius: 40px;
     padding-bottom: 5px;
     height: 100%;
     width: 100%;
     background: url("../images/tableSurface.jpg") 100% 100%;
-    background-size: cover;
+    
 }
 
 .base-seat {
@@ -123,14 +118,6 @@ body {
     min-height: 50px;
 }
 
-.player-cards {
-
-    width: 100%;
-    height: 80px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-}
 
 .card-img {
     max-height: 50px;
@@ -138,7 +125,7 @@ body {
 }
 
 .player-cards img {
-    max-height: 50px;
+    max-height: 60px;
     min-height: 50px;
 }
 
@@ -157,6 +144,107 @@ body {
     border: 1px solid black;
 }
 
+/*  Brining in grid. */
+
+.main-container {
+    display: grid;
+    grid-template-columns: 1fr 7fr 1fr;
+    text-align: center;
+}
+
+.player-seat-1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.player-seat-2 {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.player-seat-3 {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.player-seat-4 {
+    grid-column: 3;
+    grid-row: 2;
+    display: grid;
+    align-items: center;
+}
+
+.player-seat-5 {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.player-seat-6 {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.player-seat-7 {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+.player-seat-8 {
+    grid-column: 1;
+    grid-row: 2;
+    display: grid;
+    align-items: center;
+}
+
+.player-icon {
+    border-radius: 30px;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    background-color: #63A46C;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.playing-table {
+    grid-column: 2;
+    column-width: 3/4;
+    grid-row: 2;
+    height: 50vh;
+    background-color: #6a7152;
+    border: 1px solid black;
+    border-radius: 50px;
+}
+
+.cards-area {
+    display: grid;
+    grid-template-columns: 7fr 1fr;
+    border: 1px solid black;
+}
+
+.card-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.player-cards {
+    height: 80px;
+    grid-column: 1;
+    column-width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    border-right: 1px solid black;
+    
+}
+
+.player-cards div {
+    border: 1px solid black;
+}
+
+/*  new grid end. */
 /*  I didn't want to go here since I was planning on building this into a mobile app and therefor designed for desktop first but here we are...
     That being said, I'm still going mobile.
 
