added basic logo to the index page just because.

--- a/Durak/Pages/Index.cshtml
+++ b/Durak/Pages/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
     <div class="container">
         <h1>Durak TP Edition</h1>
+        <div style="display: flex; justify-content: center;">
+            <img src="/images/durak-log.png" style="height: 40vh; width: auto;" alt="Responsive image">
+        </div>
     </div>
 
 
