--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -34,24 +34,14 @@ body {
     
 }
 
-.base-seat {
-    background: white;
-    border: 1px solid black;
-}
-
-.player-seat {
-    background: #d5f2f2;
-    border: 1px solid black;
-}
 
 .player-attacker {
-    background: #93edce;
-    border: 1px solid green;
+    box-shadow: 0px 0px 5px 3px cyan;
 }
 
 .player-defender {
-    background: #f27272;
-    border: 1px solid red;
+    
+    box-shadow: 0px 0px 5px 3px red;
 }
 
 #deckArea {
@@ -81,11 +71,11 @@ body {
     top: 0;
     left: 50%;
     transform: translate(-50%, -100%);
-    background-color: #fff;
     border: 1px solid #000;
     padding: 10px;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    
 }
 
 #message-box.show {
@@ -145,6 +135,12 @@ body {
 }
 
 /*  Brining in grid. */
+
+.buttons-box {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding-bottom: 5px;
+}
 
 .main-container {
     display: grid;
