--- a/Durak/wwwroot/css/site.css
+++ b/Durak/wwwroot/css/site.css
@@ -138,8 +138,26 @@ body {
 
 .buttons-box {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     padding-bottom: 5px;
+}
+
+.btn-game {
+    width: 80%;
+    font-optical-sizing: auto;
+    font-size:small; 
+}
+
+.chat-window {
+    display: none;
+    border: 1px solid black;
+    margin-top: 5px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 60%;
+    background: white;
 }
 
 .main-container {
